adding function to get the value and gradient for the parameters